--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,7 +72,8 @@ jobs:
         with:
           python-version: 3.7
       - name: install python dependencies
-        run: pip install .
+        run: pip install pollination-annual-daylight
+        run: pip install -r requirements.txt
       - name: deploy to production
         run: |
           queenbee
