--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,8 +72,9 @@ jobs:
         with:
           python-version: 3.7
       - name: install python dependencies
-        run: pip install pollination-annual-daylight
-        run: pip install -r requirements.txt
+        run: |
+          pip install pollination-annual-daylight
+          pip install -r requirements.txt
       - name: deploy to production
         run: |
           queenbee
