--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,6 @@ name: CI
 on: [push]
 
 jobs:
-
   deploy:
     name: Deploy to GitHub and PyPI
     runs-on: ubuntu-latest
@@ -15,7 +14,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
-      - name: set up node  # we need node for for semantic release
+      - name: set up node # we need node for for semantic release
         uses: actions/setup-node@v2.1.2
         with:
           node-version: 14.2.0
@@ -24,8 +23,7 @@ jobs:
           pip install -r dev-requirements.txt
           pip install .
       - name: install semantic-release
-        run:
-          npm install @semantic-release/exec
+        run: npm install @semantic-release/exec
       - name: run semantic release
         id: new_release
         run: |
@@ -60,6 +58,17 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
+      - name: rebase visualization branch
+        run: git rebase visualization
+      - name: install python viz dependencies
+        run: pip install .
+      - name: deploy viz to staging
+        run: |
+          queenbee
+          pollination dsl push pollination-annual-daylight --tag ${{needs.deploy.outputs.tag}}-viz -e https://api.staging.pollination.cloud -src https://api.staging.pollination.cloud/registries --push-dependencies
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
 
   deploy-to-production:
     name: Deploy to Pollination Production
@@ -67,6 +76,10 @@ jobs:
     if: github.ref == 'refs/heads/production' && github.repository_owner == 'pollination'
     steps:
       - uses: actions/checkout@v2
+      - name: Get Job Context
+        id: get-context
+        run: |
+          echo "::set-output name=tag::$(git describe --tags | sed 's/v//')"
       - name: set up Python
         uses: actions/setup-python@v2
         with:
@@ -78,7 +91,18 @@ jobs:
       - name: deploy to production
         run: |
           queenbee
-          pollination dsl push pollination-annual-daylight -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
+          pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}} -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
+      - name: rebase visualization branch
+        run: git rebase visualization
+      - name: install python viz dependencies
+        run: pip install .
+      - name: deploy viz to production
+        run: |
+          queenbee
+          pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}}-viz -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
