--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: git remote -v
+      - run: git fetch origin/visualization
       - run: git rebase origin/visualization
       - name: set up Python
         uses: actions/setup-python@v2
