--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,7 +15,8 @@ jobs:
       - uses: actions/checkout@v2
       - run: git remote -v
       - run: git fetch origin visualization
-      - run: git rebase ${{ github.head_ref }} origin/visualization
+      - run: git branch
+      - run: git rebase origin/${{ github.head_ref }} origin/visualization
       - name: set up Python
         uses: actions/setup-python@v2
         with:
