--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,21 +58,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
-      - uses: actions/checkout@v2
-        with:
-          ref: visualization
-      - name: rebase visualization branch
-        run: |
-          git rebase master
-      - name: install python viz dependencies
-        run: pip install .
-      - name: deploy viz to staging
-        run: |
-          queenbee
-          pollination dsl push pollination-annual-daylight --tag ${{needs.deploy.outputs.tag}}-viz -e https://api.staging.pollination.cloud -src https://api.staging.pollination.cloud/registries --push-dependencies
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
 
   deploy-to-production:
     name: Deploy to Pollination Production
@@ -80,10 +65,6 @@ jobs:
     if: github.ref == 'refs/heads/production' && github.repository_owner == 'pollination'
     steps:
       - uses: actions/checkout@v2
-      - name: Get Job Context
-        id: get-context
-        run: |
-          echo "::set-output name=tag::$(git describe --tags | sed 's/v//')"
       - name: set up Python
         uses: actions/setup-python@v2
         with:
@@ -95,22 +76,7 @@ jobs:
       - name: deploy to production
         run: |
           queenbee
-          pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}} -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
-      - uses: actions/checkout@v2
-        with:
-          ref: visualization
-      - name: rebase visualization branch
-        run: |
-          git rebase production
-      - name: install python viz dependencies
-        run: pip install .
-      - name: deploy viz to production
-        run: |
-          queenbee
-          pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}}-viz -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
+          pollination dsl push pollination-annual-daylight -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
