--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,7 @@
 ---
 name: CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   deploy:
@@ -42,7 +42,7 @@ jobs:
     name: Deploy to Pollination Staging
     runs-on: ubuntu-latest
     needs: deploy
-    if: ${{ github.ref == 'refs/heads/master' && github.repository_owner == 'pollination' && contains(needs.deploy.outputs.tag, '.') }}
+    # if: ${{ github.ref == 'refs/heads/master' && github.repository_owner == 'pollination' && contains(needs.deploy.outputs.tag, '.') }}
     steps:
       - uses: actions/checkout@v2
       - name: set up Python
@@ -67,18 +67,20 @@ jobs:
           git rebase master
       - name: install python viz dependencies
         run: pip install .
-      - name: deploy viz to staging
-        run: |
-          queenbee
-          pollination dsl push pollination-annual-daylight --tag ${{needs.deploy.outputs.tag}}-viz -e https://api.staging.pollination.cloud -src https://api.staging.pollination.cloud/registries --push-dependencies
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
+      - name: run tests
+        run: python -m pytest tests/
+      # - name: deploy viz to staging
+      #   run: |
+      #     queenbee
+      #     pollination dsl push pollination-annual-daylight --tag ${{needs.deploy.outputs.tag}}-viz -e https://api.staging.pollination.cloud -src https://api.staging.pollination.cloud/registries --push-dependencies
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
 
   deploy-to-production:
     name: Deploy to Pollination Production
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/production' && github.repository_owner == 'pollination'
+    # if: github.ref == 'refs/heads/production' && github.repository_owner == 'pollination'
     steps:
       - uses: actions/checkout@v2
       - name: set up Python
@@ -105,10 +107,12 @@ jobs:
           git rebase production
       - name: install python viz dependencies
         run: pip install .
-      - name: deploy viz to production
-        run: |
-          queenbee
-          pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}}-viz -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
+      - name: run tests
+        run: python -m pytest tests/
+      # - name: deploy viz to production
+      #   run: |
+      #     queenbee
+      #     pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}}-viz -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
