--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,7 +64,9 @@ jobs:
           fetch-depth: 0
       - name: rebase visualization branch
         run: |
-          git rebase master
+          git rebase origin/master
+      - name: bash
+        run: git log --pretty=oneline
       - name: install python viz dependencies
         run: pip install .
       - name: run tests
@@ -77,45 +79,40 @@ jobs:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #     QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
 
-  deploy-to-production:
-    name: Deploy to Pollination Production
-    runs-on: ubuntu-latest
-    # if: github.ref == 'refs/heads/production' && github.repository_owner == 'pollination'
-    steps:
-      - uses: actions/checkout@v2
-      - name: set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.7
-      - name: install python dependencies
-        run: |
-          pip install pollination-annual-daylight
-          pip install -r requirements.txt
-      # - name: deploy to production
-      #   run: |
-      #     queenbee
-      #     pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}} -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
-      - uses: actions/checkout@v2
-        with:
-          ref: visualization
-          fetch-depth: 0
-      - name: bash
-        run: |
-          git branch -a
-      - name: rebase visualization branch
-        run: |
-          git rebase origin/production
-      - name: install python viz dependencies
-        run: pip install .
-      - name: run tests
-        run: python -m pytest tests/
-      # - name: deploy viz to production
-      #   run: |
-      #     queenbee
-      #     pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}}-viz -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
+  # deploy-to-production:
+  #   name: Deploy to Pollination Production
+  #   runs-on: ubuntu-latest
+  #   # if: github.ref == 'refs/heads/production' && github.repository_owner == 'pollination'
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: set up Python
+  #       uses: actions/setup-python@v2
+  #       with:
+  #         python-version: 3.7
+  #     - name: install python dependencies
+  #       run: |
+  #         pip install pollination-annual-daylight
+  #         pip install -r requirements.txt
+  #     # - name: deploy to production
+  #     #   run: |
+  #     #     queenbee
+  #     #     pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}} -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
+  #     #   env:
+  #     #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #     #     QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
+  #     - uses: actions/checkout@v2
+  #       with:
+  #         ref: visualization
+  #         fetch-depth: 0
+  #     - name: rebase visualization branch
+  #       run: |
+  #         git rebase origin/production
+  #     - name: install python viz dependencies
+  #       run: pip install .
+  #     # - name: deploy viz to production
+  #     #   run: |
+  #     #     queenbee
+  #     #     pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}}-viz -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
+  #     #   env:
+  #     #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #     #     QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
