--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,7 +41,7 @@ jobs:
   deploy-to-staging:
     name: Deploy to Pollination Staging
     runs-on: ubuntu-latest
-    needs: deploy
+    # needs: deploy
     # if: ${{ github.ref == 'refs/heads/master' && github.repository_owner == 'pollination' && contains(needs.deploy.outputs.tag, '.') }}
     steps:
       - uses: actions/checkout@v2
