--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -85,6 +85,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
+      - name: Get Job Context
+        id: get-context
+        run: |
+          echo "::set-output name=tag::$(git describe --tags | sed 's/v//')"
       - name: install python dependencies
         run: |
           pip install pollination-annual-daylight
