--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,6 +58,22 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
+      - uses: actions/checkout@v2
+        with:
+          ref: visualization
+          fetch-depth: 0
+      - name: rebase visualization branch
+        run: |
+          git config --global user.email "ci@pollination.cloud"
+          git config --global user.name "GitHub Actions"
+          git rebase origin/master
+      - name: deploy viz to staging
+        run: |
+          queenbee
+          pollination dsl push pollination-annual-daylight --tag ${{needs.deploy.outputs.tag}}-viz -e https://api.staging.pollination.cloud -src https://api.staging.pollination.cloud/registries --push-dependencies
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
 
   deploy-to-production:
     name: Deploy to Pollination Production
@@ -69,6 +85,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
+      - name: Get Job Context
+        id: get-context
+        run: |
+          echo "::set-output name=tag::$(git describe --tags | sed 's/v//')"
       - name: install python dependencies
         run: |
           pip install pollination-annual-daylight
@@ -76,7 +96,25 @@ jobs:
       - name: deploy to production
         run: |
           queenbee
-          pollination dsl push pollination-annual-daylight -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
+          pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}} -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
+      - uses: actions/checkout@v2
+        with:
+          ref: visualization
+          fetch-depth: 0
+      - name: rebase visualization branch
+        run: |
+            git config --global user.email "ci@pollination.cloud"
+            git config --global user.name "GitHub Actions"
+            git rebase origin/production
+      - name: install python viz dependencies
+        run: pip install .
+      - name: deploy viz to production
+        run: |
+          queenbee
+          pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}}-viz -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
