--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,12 +68,15 @@ jobs:
           git config --global user.name "GitHub Actions"
           git rebase origin/master
       - name: deploy viz to staging
-        run: |
-          queenbee
-          pollination dsl push pollination-annual-daylight --tag ${{needs.deploy.outputs.tag}}-viz -e https://api.staging.pollination.cloud -src https://api.staging.pollination.cloud/registries --push-dependencies
         env:
+          TAG: ${{ needs.deploy.outputs.tag }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
+        run: |
+          TAG="${TAG:?}-viz"
+
+          queenbee
+          pollination dsl push pollination-annual-daylight --tag $TAG -e https://api.staging.pollination.cloud -src https://api.staging.pollination.cloud/registries --push-dependencies
 
   deploy-to-production:
     name: Deploy to Pollination Production
@@ -112,9 +115,12 @@ jobs:
       - name: install python viz dependencies
         run: pip install .
       - name: deploy viz to production
-        run: |
-          queenbee
-          pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}}-viz -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
         env:
+          TAG: ${{ steps.get-context.outputs.tag }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
+        run: |
+          TAG="${TAG:?}-viz"
+
+          queenbee
+          pollination dsl push pollination-annual-daylight --tag $TAG -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
