--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -67,6 +67,8 @@ jobs:
           git config --global user.email "ci@pollination.cloud"
           git config --global user.name "GitHub Actions"
           git rebase origin/master
+      - name: install python viz dependencies
+        run: pip install .[viz]
       - name: deploy viz to staging
         env:
           TAG: ${{ needs.deploy.outputs.tag }}
@@ -100,8 +102,10 @@ jobs:
           pip install -r requirements.txt
       - name: deploy to production
         run: |
+          TAG=$(echo "${TAG:?}" | sed 's/[[:space:]]//g')
+          echo $TAG
           queenbee
-          pollination dsl push pollination-annual-daylight --tag ${{steps.get-context.outputs.tag}} -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
+          pollination dsl push pollination-annual-daylight --tag $TAG -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
@@ -115,7 +119,7 @@ jobs:
             git config --global user.name "GitHub Actions"
             git rebase origin/production
       - name: install python viz dependencies
-        run: pip install .
+        run: pip install .[viz]
       - name: deploy viz to production
         env:
           TAG: ${{ steps.get-context.outputs.tag }}
