--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 pollination-honeybee-radiance==0.22.13
+pollination-honeybee-radiance-postprocess==1.0.0
 pollination-alias==0.10.9
 pollination-path==0.3.1
+honeybee-radiance-postprocess==0.3.0
