--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,49 +38,49 @@ jobs:
     outputs:
       tag: ${{ steps.new_release.outputs.tag }}
 
-  # deploy-to-staging:
-  #   name: Deploy to Pollination Staging
-  #   runs-on: ubuntu-latest
-  #   needs: deploy
-  #   if: ${{ github.ref == 'refs/heads/master' && github.repository_owner == 'pollination' && contains(needs.deploy.outputs.tag, '.') }}
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: set up Python
-  #       uses: actions/setup-python@v2
-  #       with:
-  #         python-version: 3.7
-  #     - name: install python dependencies
-  #       run: pip install .
-  #     - name: deploy to staging
-  #       run: |
-  #         queenbee
-  #         pollination dsl push pollination-annual-daylight --tag ${{needs.deploy.outputs.tag}} -e https://api.staging.pollination.cloud -src https://api.staging.pollination.cloud/registries --push-dependencies
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
-  #     - uses: actions/checkout@v2
-  #       with:
-  #         ref: visualization
-  #         fetch-depth: 0
-  #     - name: rebase visualization branch
-  #       run: |
-  #         git config --global user.email "ci@pollination.cloud"
-  #         git config --global user.name "GitHub Actions"
-  #         git rebase origin/master
-  #     - name: install python viz dependencies
-  #       run: pip install .[viz]
-  #     - name: deploy viz to staging
-  #       env:
-  #         TAG: ${{ needs.deploy.outputs.tag }}
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
-  #       run: |
-  #         TAG=$(echo "${TAG:?}-viz" | sed 's/[[:space:]]//g')
+  deploy-to-staging:
+    name: Deploy to Pollination Staging
+    runs-on: ubuntu-latest
+    needs: deploy
+    if: ${{ github.ref == 'refs/heads/master' && github.repository_owner == 'pollination' && contains(needs.deploy.outputs.tag, '.') }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: install python dependencies
+        run: pip install .
+      - name: deploy to staging
+        run: |
+          queenbee
+          pollination dsl push pollination-annual-daylight --tag ${{needs.deploy.outputs.tag}} -e https://api.staging.pollination.cloud -src https://api.staging.pollination.cloud/registries --push-dependencies
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
+      - uses: actions/checkout@v2
+        with:
+          ref: visualization
+          fetch-depth: 0
+      - name: rebase visualization branch
+        run: |
+          git config --global user.email "ci@pollination.cloud"
+          git config --global user.name "GitHub Actions"
+          git rebase origin/master
+      - name: install python viz dependencies
+        run: pip install .[viz]
+      - name: deploy viz to staging
+        env:
+          TAG: ${{ needs.deploy.outputs.tag }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_STAGING_LADYBUGBOT_TOKEN }}
+        run: |
+          TAG=$(echo "${TAG:?}-viz" | sed 's/[[:space:]]//g')
 
-  #         echo $TAG
+          echo $TAG
 
-  #         queenbee
-  #         pollination dsl push pollination-annual-daylight --tag $TAG -e https://api.staging.pollination.cloud -src https://api.staging.pollination.cloud/registries --push-dependencies
+          queenbee
+          pollination dsl push pollination-annual-daylight --tag $TAG -e https://api.staging.pollination.cloud -src https://api.staging.pollination.cloud/registries --push-dependencies
 
   deploy-to-production:
     name: Deploy to Pollination Production
