--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-pollination-two-phase-daylight-coefficient==1.1.0
+pollination-honeybee-radiance==0.22.33
+pollination-honeybee-radiance-postprocess==0.0.32
 pollination-dsl>=0.14.3
+pollination-alias==0.11.5
+pollination-path==0.3.2
