--- a/.releaserc.json
+++ b/.releaserc.json
@@ -2,12 +2,6 @@
     "plugins": [
         "@semantic-release/commit-analyzer",
         "@semantic-release/release-notes-generator",
-        "@semantic-release/github",
-        [
-            "@semantic-release/exec",
-            {
-                "publishCmd": "bash deploy.sh"
-            }
-        ]
+        "@semantic-release/github"
     ]
 }
