--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -103,7 +103,7 @@ jobs:
         run:
           python setup.py sdist bdist_wheel --branch ${{ matrix.branch }}
           echo "Pushing new version to PyPi"
-          twine upload dist/* -u ${{ PYPI_USERNAME }} -p ${{ PYPI_PASSWORD }}
+          twine upload dist/* -u $PYPI_USERNAME -p $PYPI_PASSWORD
 
   deploy-to-production:
     name: Deploy to Pollination Production
