--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -137,26 +137,40 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
           TAG: ${{ steps.get-context.outputs.tag }}
+
+    outputs:
+      tag: ${{ steps.get-context.outputs.tag }}
+
+  deploy-viz-and-full-to-production:
+    name: Deploy `viz` and `full` branches
+    runs-on: ubuntu-latest
+    needs: [deploy-to-production]
+    if: github.ref == 'refs/heads/production' && github.repository_owner == 'pollination'
+    strategy:
+      fail-fast: true
+      matrix:
+        branch: [viz, full]
+    steps:
       - uses: actions/checkout@v2
         with:
-          ref: visualization
+          ref: ${{ matrix.branch }}
           fetch-depth: 0
-      - name: rebase visualization branch
+      - name: rebase ${{ matrix.branch }} branch
         run: |
             git config --global user.email "ci@pollination.cloud"
             git config --global user.name "GitHub Actions"
             git rebase origin/production
       - name: install python viz dependencies
         run: pip install .[viz]
-      - name: deploy viz to production
+      - name: deploy  ${{ matrix.branch }} to production
         env:
-          TAG: ${{ steps.get-context.outputs.tag }}
+          TAG: ${{ needs.deploy-to-production.outputs.tag }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           QB_POLLINATION_TOKEN: ${{ secrets.POLLINATION_LADYBUGBOT_TOKEN }}
         run: |
-          TAG=$(echo "${TAG:?}-viz" | sed 's/[[:space:]]//g')
+          TAG=$(echo "${TAG:?}" | sed 's/[[:space:]]//g')
 
-          echo $TAG
+          echo $TAG-${{ matrix.branch }}
 
           queenbee
-          pollination dsl push pollination-annual-daylight --tag $TAG -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
+          pollination dsl push pollination-annual-daylight --tag $TAG-${{ matrix.branch }} -e https://api.pollination.cloud -src https://api.pollination.cloud/registries --push-dependencies
