--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -67,7 +67,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        branch: [viz, full]
+        branch: [full, viz]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -149,7 +149,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        branch: [viz, full]
+        branch: [full, viz]
     steps:
       - uses: actions/checkout@v2
         with:
